--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,35 @@
-# Web Scraping
+# ============================================
+# WEB SCRAPING - Tienda Compensar
+# ============================================
+
+# HTTP Requests
 requests>=2.31.0
+
+# HTML Parsing
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
 html5lib>=1.1
 
-# Data Processing
-pandas>=2.0.0
-
-# Database
-sqlite3  # Built-in, no install needed
-
-# Async support (for faster scraping)
-aiohttp>=3.9.0
-asyncio  # Built-in
-
-# Rate limiting and retry
-tenacity>=8.2.0
-
-# Progress bar
-tqdm>=4.66.0
-
-# Environment variables
-python-dotenv>=1.0.0
-
-# Selenium (for JavaScript-rendered content if needed)
-selenium>=4.15.0
+# Browser Automation (para páginas con JavaScript)
+playwright>=1.40.0    # ⭐ RECOMENDADO - Funciona en WSL
+selenium>=4.15.0      # Alternativa
 webdriver-manager>=4.0.0
+
+# ============================================
+# DATA PROCESSING
+# ============================================
+pandas>=2.0.0
+numpy>=1.24.0
+
+# ============================================
+# ASYNC & UTILITIES
+# ============================================
+aiohttp>=3.9.0
+tenacity>=8.2.0       # Retry logic
+tqdm>=4.66.0          # Progress bars
+python-dotenv>=1.0.0  # Environment variables
+
+# ============================================
+# SPOTIFY INTEGRATION (futuro)
+# ============================================
+# spotipy>=2.23.0     # Spotify API client (descomentar cuando se necesite)
