Add requirements supabase

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,11 @@ pandas>=2.0.0
 numpy>=1.24.0
 
 # ============================================
+# DATABASE - Supabase (PostgreSQL)
+# ============================================
+supabase>=2.0.0       # Supabase Python client
+
+# ============================================
 # ASYNC & UTILITIES
 # ============================================
 aiohttp>=3.9.0
