--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@ data/
 # Ignore venv
 Behuman-Hackaton/
 
-
 # Ignore cache
-
 __pycache__
 
 # Ignore test
@@ -16,4 +14,44 @@ test/
 .env
 .env.local
 .env.production
+.env*
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+Frontend/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
